--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>KIRUBA </title>
        </head>
     <body id="page-top">
-        <body style="background-color:DodgerBlue;">
+        <body style="background-color:orange;">
             <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
